// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse: render should not render collapse component child if it not "CollapseItem" 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    id="ui-collapse-item.1"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component items and first item should be expanded 1`] = `
<div
  activeKey="сid1"
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    id="сid1"
    isActive={true}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="сid2"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component items with custom id 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    id="сid1"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="сid2"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component with expanded item based on props when "defaultActiveKey" is provided 1`] = `
<div
  activeKey="сid1"
  className="ui-collapse ui-collapse_accordion"
  defaultActiveKey="сid2"
>
  <CollapseItem
    id="сid1"
    isActive={true}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="сid2"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component with expanded item by default 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
  defaultActiveKey="сid2"
>
  <CollapseItem
    id="сid1"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="сid2"
    isActive={true}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component with expanded items based on "defaultActiveKey" 1`] = `
<div
  className="ui-collapse"
  defaultActiveKey={
    Array [
      "сid1",
      "сid2",
    ]
  }
>
  <CollapseItem
    id="сid1"
    isActive={true}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="сid2"
    isActive={true}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return "accordion" collapse component with two items 1`] = `
<div
  className="ui-collapse ui-collapse_accordion"
>
  <CollapseItem
    id="ui-collapse-item.0"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="ui-collapse-item.1"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return collapse component with two items 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    id="ui-collapse-item.0"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="ui-collapse-item.1"
    isActive={false}
    labelProps={Object {}}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return empty collapse component 1`] = `null`;
